@@ -1,0 +1,8 @@
+dim a(6)
+a[0] = 10
+a[1] = 10
+a[2] = 20
+a[3] = 20
+a[4] = 15
+a[5] = 10
+poly a, 3
